<resources>
    <string name="app_name">DataBase</string>
    <string name="title_text">Потребительская корзина</string>
    <string name="exit">Выход</string>
    <string name="name">Название продукта</string>
    <string name="text_price">Цена</string>
    <string name="text_weight">Вес</string>
    <string name="save">Сохранить</string>
    <string name="upgrade">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="start">Начать работу</string>
    <string name="cancel">Отменить</string>
</resources>