<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_margin"
            android:text="@string/name"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_margin"
            android:text="@string/text_weight"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_margin"
            android:text="@string/text_price"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"/>

</LinearLayout>