<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </androidx.appcompat.widget.Toolbar>

     <TableLayout
         android:id="@+id/tbLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin">

            <TableRow >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/name"
                    android:textSize="@dimen/text_size"
                    />
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginStart="@dimen/margin"
                    android:minWidth="20sp"
                    />
            </TableRow>
            <TableRow >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/text_weight"
                    android:textSize="@dimen/text_size"
                    />
                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginStart="@dimen/margin"
                    android:minWidth="20sp"
                    />
            </TableRow>
            <TableRow >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/text_price"
                    android:textSize="@dimen/text_size"
                    />
                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginStart="@dimen/margin"
                    android:minWidth="20sp"
                    />
            </TableRow>
        </TableLayout>


    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbLayout">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_margin"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_margin"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>