<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/name"
                android:textSize="@dimen/text_size"
                />
            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="@dimen/margin"
                />
        </TableRow>
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/text_weight"
                android:textSize="@dimen/text_size"
                />
            <EditText
                android:id="@+id/etWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="@dimen/margin"
                />
        </TableRow>
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/text_price"
                android:textSize="@dimen/text_size"
                />
            <EditText
                android:id="@+id/etPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="@dimen/margin"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>